--- a/VenmeWPF/MainWindow.xaml
+++ b/VenmeWPF/MainWindow.xaml
@@ -20,5 +20,6 @@
             </DataGrid.Columns>
         </DataGrid>
         <DatePicker HorizontalAlignment="Left" Margin="71,43,0,0" VerticalAlignment="Top" SelectedDateChanged="DatePicker_SelectedDateChanged"/>
+        <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="225,43,0,0" VerticalAlignment="Top" Width="127"/>
     </Grid>
 </Window>
